fixed header on mobile

--- a/style.css
+++ b/style.css
@@ -275,7 +275,7 @@ button:hover {
 
   .topbanner {
     text-align: center;
-    height: 36vh;
+    height: 29vh;
     margin: 0;
     padding: 0;
     position: relative;
